--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "astro": "^5.5.6"
+  "devDependencies": {
+    "astro": "^5.5.6",
+    "tailwindcss": "^4.0.17"
   }
 }
