--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
     "astro": "^5.5.6",
     "tailwindcss": "^4.0.17"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1"
   }
 }
